# keyutils-py

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  REUSE.toml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/: dependabot.yml
.github/workflows/: build_base_images.yml  check_quality.yml  create_release_tag.yml  release_on_tag.yml
data/dockerfiles/: Dockerfile.base  Dockerfile.dev
keyutils_py/: __init__.py  __main__.py  asn1utils.py  compute.py  data_objects.py  enums.py  exceptions.py  keyutils.py  oids.py  security.py  types.py  utils.py
keyutils_py/data/: __init__.py
keyutils_py/data/keys/hss_keys/: hss_lms_sha256_m24_h10_lmots_sha256_n24_w1_l9.pem
keyutils_py/data/keys/pq_keys/: private-key-frodokem-1344-aes-raw.pem  private-key-frodokem-1344-shake-raw.pem  private-key-frodokem-640-aes-raw.pem  private-key-frodokem-640-shake-raw.pem  private-key-frodokem-976-aes-raw.pem  private-key-frodokem-976-shake-raw.pem  private-key-mceliece-348864-raw.pem  private-key-mceliece-6960119-raw.pem  private-key-mceliece-8192128-raw.pem  private-key-ml-dsa-44-raw.pem  private-key-ml-dsa-44-seed.pem  private-key-ml-dsa-65-raw.pem  private-key-ml-dsa-65-seed.pem  private-key-ml-dsa-87-raw.pem  private-key-ml-dsa-87-seed.pem  private-key-ml-kem-1024-raw.pem  private-key-ml-kem-1024-seed.pem  private-key-ml-kem-512-raw.pem  private-key-ml-kem-512-seed.pem  private-key-ml-kem-768-raw.pem  private-key-ml-kem-768-seed.pem  private-key-slh-dsa-sha2-128f-raw.pem  private-key-slh-dsa-sha2-128f-seed.pem  private-key-slh-dsa-sha2-128s-seed.pem  private-key-slh-dsa-sha2-192f-raw.pem  private-key-slh-dsa-sha2-192f-seed.pem  private-key-slh-dsa-sha2-192s-seed.pem  private-key-slh-dsa-sha2-256f-raw.pem  private-key-slh-dsa-sha2-256f-seed.pem  private-key-slh-dsa-shake-128f-seed.pem  private-key-slh-dsa-shake-128s-seed.pem  private-key-slh-dsa-shake-192f-seed.pem  private-key-slh-dsa-shake-192s-seed.pem  private-key-slh-dsa-shake-256f-seed.pem  private-key-slh-dsa-shake-256s-seed.pem  private-key-sntrup761-raw.pem
keyutils_py/data/keys/xmss_xmssmt_keys/: private-key-xmss-sha2_10_192.pem  private-key-xmss-sha2_10_256.pem  private-key-xmss-sha2_10_512.pem  private-key-xmss-sha2_16_192.pem  private-key-xmss-sha2_16_256.pem  private-key-xmss-sha2_16_512.pem  private-key-xmss-sha2_20_192.pem  private-key-xmss-sha2_20_256.pem  private-key-xmss-sha2_20_512.pem  private-key-xmss-shake256_10_192.pem  private-key-xmss-shake256_10_256.pem  private-key-xmss-shake256_16_192.pem  private-key-xmss-shake256_16_256.pem  private-key-xmss-shake256_20_192.pem  private-key-xmss-shake256_20_256.pem  private-key-xmss-shake_10_256.pem  private-key-xmss-shake_10_512.pem  private-key-xmss-shake_16_256.pem  (+19 more)
keyutils_py/factories/: __init__.py  abstract_factory.py  hybrid_factory.py  pq_factory.py  pq_stfl_factory.py  trad_factory.py
keyutils_py/fips/: __init__.py  _fips_utils.py  fips203.py  fips204.py  fips205.py  frodokem.py
keyutils_py/jwt/: __init__.py  jw_keys.py  jw_mapping.py  jwt_utils.py
keyutils_py/keys/: __init__.py  _crypto_backend.py  abstract_pq.py  abstract_stateful_hash_sig.py  abstract_wrapper_keys.py  chempat_key.py  composite_kem.py  composite_sig.py  hss_validation.py  kem_keys.py  kem_mechanism.py  key_pyasn1_utils.py  serialize_utils.py  sig_keys.py  stateful_sig_keys.py  trad_kem_keys.py  xwing.py
scripts/: add_licenses.py  setup.sh
scripts/release/: release_metadata.py
src/: __init__.py  example.py
tests/: __init__.py  conftest.py  test_addition_example.py  test_cryptography_backend.py  test_dispatch.py  test_ecdsa_eddsa_sign.py  test_falcon_sign_verify.py  test_helpers.py  test_hss_sign.py  test_keystore.py  test_ml_dsa_sign_verify.py  test_ml_kem_encaps.py  test_pq_keys.py  test_rsa_pss.py  test_security_utils.py  test_slh_dsa_sign_verify.py  test_smoke.py
tests/jwt/: test_jw_keys.py  test_jw_mapping.py  test_jwt_utils.py
tests/release_logic/: test_release_metadata.py
tests/tests_pqc_stateful_sigs/: test_exhaust_stfl_keys.py  test_manipulate_pq_stateful_signature_bytes.py  test_xmss_xmssmt_key_loading_file.py
tests/tests_pqc_stateful_sigs/tests_hss/: __init__.py  test_hss_error_messages.py  test_hss_key_loading.py  test_hss_keys.py  test_hss_sig_index.py  test_hss_sign.py  test_hss_validation.py
tests/tests_pqc_stateful_sigs/tests_xmss/: test_xmss_keyusage_tracking.py  test_xmss_sig_index.py  test_xmss_statefulsignature.py
tests/tests_pqc_stateful_sigs/tests_xmssmt/: __init__.py  test_xmssmt_sig_index.py  test_xmssmt_statefulsignature.py
(+325 files in other folders)
